# uat-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.appgarden.yml  docker-compose.yml  kamiwaza.json  load-test-report-0.13.0.md  load-test-report-0.13.1.md  load-test-report-100bot-15turn-steady.md  load-test-report-100bot-50concurrent.md  load-test-report-100bot-multimodel.md  load-test-report-perf-overhaul.md  pyproject.toml  root-cause-100bot-a826c0f4.md  stress-tester-plan.md  uat-bot-plan.md
data/scenarios/: kaizen_chat_seeded.yaml  kaizen_conversation_probe.yaml  kaizen_conversation_probe_v2.yaml  kaizen_duplicate_flow.yaml  kaizen_edit_autosave.yaml  kaizen_probe_runtime.yaml  kaizen_search_recipe.yaml  (+3 more)
make/: build.mk  common.mk  demo.mk  dev.mk  discovery.mk  help.mk  metadata.mk  quality.mk  stress.mk  templates.mk
reports/: kaizen-gpt5nano-workroom-distinct-user-rerun-detector-fixed-results-2026-05-30.md  kaizen-gpt5nano-workroom-distinct-user-rerun-results-2026-05-30.md
scripts/: format-help.py  get-version.py  sync_to_kamiwaza_extensions_template.py
stress_profiles/: load.yaml  smoke.yaml  soak.yaml
stress_tester/: __init__.py  __main__.py  config.py  main.py  models.py
tests/: test_builder_api.py  test_models.py  test_planner.py  test_ramp.py  test_report_generator.py  test_review_planner.py  test_reviews_api.py  test_runs_api.py  test_scenario_runner.py  test_uat_context.py  test_ui.py  test_user_manager_runtime.py  test_worker_login.py
uat_bot/: __init__.py  __main__.py  config.py  main.py  models.py
(+85 files in other folders)
