[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uat-bot"
version = "0.1.0"
description = "Containerized vision-guided stress testing bot for Kamiwaza"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "httpx>=0.28.0",
  "playwright>=1.54.0",
  "anthropic>=0.40.0",
  "pyyaml>=6.0",
  "python-dateutil>=2.9.0.post0",
]

[project.scripts]
uat-bot = "uat_bot.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "respx>=0.22.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["uat_bot"]
